# random-facts-wikipedia

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  licence.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  licence.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  licence.rst.txt
src/random_facts_wikipedia/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
