[tool.poetry]
name = "random-facts-wikipedia"
version = "0.1.0"
description = ""
authors = ["Jonny Uribe <jouribe@starbucks.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sirjoy/random-facts-wikipedia"
repository = "https://github.com/sirjoy/random-facts-wikipedia"


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"


requests = "^2.32.3"
types-requests = "^2.32.0.20240622"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
safety = "^3.2.4"
mypy = "^1.10.1"
pytype = {version = "^2024.4.11", python = "3.10"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
random-facts-wikipedia = "random_facts_wikipedia.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["random_facts_wikipedia"]

[tool.coverage.report]
show_missing = true
fail_under = 100